cli/crates/core/tests/snapshots/test_parser__parse_typescript@switch-all.tsx-2.snap
---
source: crates/core/tests/test_parser.rs
expression: "&parser::Module::new(&RelativePathBuf::from_path(path.strip_prefix(&project_root).unwrap()).unwrap(),\n&project_root, &module_resolver,).unwrap()"
input_file: samples/typescript/src/functional-component/control-statements/conditional-switch/return-var/switch-all.tsx
---
source_path: src/functional-component/control-statements/conditional-switch/return-var/switch-all.tsx
id:
  hash: "11946246313802523909"
  path: src/functional-component/control-statements/conditional-switch/return-var/switch-all.tsx
  package_name: UNKNOWN
  mtype: local
created_at: ~
updated_at: ~
exports:
  - source:
      Internal: "Sample#1"
    exported_name: Sample
declarations:
  - symbol: "React#1"
    source:
      hash: "11946246313802523909"
      path: src/functional-component/control-statements/conditional-switch/return-var/switch-all.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "ExternalSymbol<SymbolWithSource { symbol: Symbol { name: Atom('default' type=static), context: #0 }, source: ModuleId { hash: 11002248552354871051, path: \"\", pkg_name: \"react\", mtype: Package } }>"
    inferred_type:
      TypeOf:
        symbol:
          symbol: "default#0"
          source:
            hash: "11002248552354871051"
            path: ""
            package_name: react
            mtype: package
        is_local: false
    start:
      line: 1
      column: 8
    end:
      line: 1
      column: 13
  - symbol: "Sample#1"
    source:
      hash: "11946246313802523909"
      path: src/functional-component/control-statements/conditional-switch/return-var/switch-all.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "<declaration>"
    inferred_type:
      Function:
        - TypeOf:
            symbol:
              symbol: "result#2"
              source:
                hash: "11946246313802523909"
                path: src/functional-component/control-statements/conditional-switch/return-var/switch-all.tsx
                package_name: UNKNOWN
                mtype: local
            is_local: true
    start:
      line: 3
      column: 8
    end:
      line: 18
      column: 2
  - symbol: "result#2"
    source:
      hash: "11946246313802523909"
      path: src/functional-component/control-statements/conditional-switch/return-var/switch-all.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "<expression>"
    inferred_type: Unknown
    start:
      line: 4
      column: 9
    end:
      line: 4
      column: 15
  - symbol: "type#2"
    source:
      hash: "11946246313802523909"
      path: src/functional-component/control-statements/conditional-switch/return-var/switch-all.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "Parameter<Symbol { name: Atom('Sample' type=inline), context: #1 }>[0]"
    inferred_type:
      ParameterOf:
        function:
          symbol: "Sample#1"
          source:
            hash: "11946246313802523909"
            path: src/functional-component/control-statements/conditional-switch/return-var/switch-all.tsx
            package_name: UNKNOWN
            mtype: local
        index: 0
    start:
      line: 3
      column: 24
    end:
      line: 3
      column: 37
scopes:
  - owner: "__global#0"
    parent: ~
    children:
      - "Sample#1"
      - "Sample#1"
      - "result#2"
    references:
      - "React#1"
      - "Sample#1"
      - "div#3"
      - "result#2"
      - "type#2"
    jsx_references:
      - "div#3"
  - owner: "Sample#1"
    parent: "__global#0"
    children:
      - "result#2"
    references:
      - "div#3"
      - "result#2"
      - "type#2"
    jsx_references:
      - "div#3"
  - owner: "result#2"
    parent: "Sample#1"
    children: []
    references: []
    jsx_references: []
  - owner: "Sample#1"
    parent: "__global#0"
    children:
      - "result#2"
    references:
      - "div#3"
      - "result#2"
      - "type#2"
    jsx_references:
      - "div#3"
  - owner: "result#2"
    parent: "Sample#1"
    children: []
    references: []
    jsx_references: []
  - owner: "result#2"
    parent: "__global#0"
    children: []
    references: []
    jsx_references: []
body:
  - type: ImportDeclaration
    span:
      start: 1
      end: 27
      ctxt: 0
    specifiers:
      - type: ImportDefaultSpecifier
        span:
          start: 8
          end: 13
          ctxt: 0
        local:
          type: Identifier
          span:
            start: 8
            end: 13
            ctxt: 1
          value: React
          optional: false
    source:
      type: StringLiteral
      span:
        start: 19
        end: 26
        ctxt: 0
      value: react
      raw: "\"react\""
    typeOnly: false
    asserts: ~
  - type: ExportDeclaration
    span:
      start: 29
      end: 303
      ctxt: 0
    declaration:
      async: false
      body:
        type: BlockStatement
        span:
          start: 67
          end: 303
          ctxt: 0
        stmts:
          - type: VariableDeclaration
            span:
              start: 73
              end: 89
              ctxt: 0
            kind: let
            declare: false
            declarations:
              - type: VariableDeclarator
                span:
                  start: 77
                  end: 88
                  ctxt: 0
                id:
                  optional: false
                  span:
                    start: 77
                    end: 83
                    ctxt: 2
                  type: Identifier
                  typeAnnotation: ~
                  value: result
                init:
                  type: NumericLiteral
                  span:
                    start: 86
                    end: 88
                    ctxt: 0
                  value: 42.0
                  raw: "42"
                definite: false
          - type: SwitchStatement
            span:
              start: 95
              end: 281
              ctxt: 0
            discriminant:
              type: Identifier
              span:
                start: 103
                end: 107
                ctxt: 2
              value: type
              optional: false
            cases:
              - type: SwitchCase
                span:
                  start: 119
                  end: 186
                  ctxt: 0
                test:
                  type: StringLiteral
                  span:
                    start: 124
                    end: 129
                    ctxt: 0
                  value: one
                  raw: "\"one\""
                consequent:
                  - type: ExpressionStatement
                    span:
                      start: 143
                      end: 167
                      ctxt: 0
                    expression:
                      type: AssignmentExpression
                      span:
                        start: 143
                        end: 166
                        ctxt: 0
                      operator: "="
                      left:
                        optional: false
                        span:
                          start: 143
                          end: 149
                          ctxt: 2
                        type: Identifier
                        typeAnnotation: ~
                        value: result
                      right:
                        type: JSXElement
                        span:
                          start: 152
                          end: 166
                          ctxt: 0
                        opening:
                          type: JSXOpeningElement
                          name:
                            type: Identifier
                            span:
                              start: 153
                              end: 156
                              ctxt: 3
                            value: div
                            optional: false
                          span:
                            start: 152
                            end: 157
                            ctxt: 0
                          attributes: []
                          selfClosing: false
                          typeArguments: ~
                        children:
                          - type: JSXText
                            span:
                              start: 157
                              end: 160
                              ctxt: 0
                            value: One
                            raw: One
                        closing:
                          type: JSXClosingElement
                          span:
                            start: 160
                            end: 166
                            ctxt: 0
                          name:
                            type: Identifier
                            span:
                              start: 162
                              end: 165
                              ctxt: 3
                            value: div
                            optional: false
                  - type: BreakStatement
                    span:
                      start: 180
                      end: 186
                      ctxt: 0
                    label: ~
              - type: SwitchCase
                span:
                  start: 196
                  end: 275
                  ctxt: 0
                test:
                  type: StringLiteral
                  span:
                    start: 201
                    end: 206
                    ctxt: 0
                  value: two
                  raw: "\"two\""
                consequent:
                  - type: BlockStatement
                    span:
                      start: 208
                      end: 275
                      ctxt: 0
                    stmts:
                      - type: ExpressionStatement
                        span:
                          start: 222
                          end: 246
                          ctxt: 0
                        expression:
                          type: AssignmentExpression
                          span:
                            start: 222
                            end: 245
                            ctxt: 0
                          operator: "="
                          left:
                            optional: false
                            span:
                              start: 222
                              end: 228
                              ctxt: 2
                            type: Identifier
                            typeAnnotation: ~
                            value: result
                          right:
                            type: JSXElement
                            span:
                              start: 231
                              end: 245
                              ctxt: 0
                            opening:
                              type: JSXOpeningElement
                              name:
                                type: Identifier
                                span:
                                  start: 232
                                  end: 235
                                  ctxt: 3
                                value: div
                                optional: false
                              span:
                                start: 231
                                end: 236
                                ctxt: 0
                              attributes: []
                              selfClosing: false
                              typeArguments: ~
                            children:
                              - type: JSXText
                                span:
                                  start: 236
                                  end: 239
                                  ctxt: 0
                                value: Two
                                raw: Two
                            closing:
                              type: JSXClosingElement
                              span:
                                start: 239
                                end: 245
                                ctxt: 0
                              name:
                                type: Identifier
                                span:
                                  start: 241
                                  end: 244
                                  ctxt: 3
                                value: div
                                optional: false
                      - type: BreakStatement
                        span:
                          start: 259
                          end: 265
                          ctxt: 0
                        label: ~
          - type: ReturnStatement
            span:
              start: 287
              end: 301
              ctxt: 0
            argument:
              type: Identifier
              span:
                start: 294
                end: 300
                ctxt: 2
              value: result
              optional: false
      declare: false
      decorators: []
      generator: false
      identifier:
        type: Identifier
        span:
          start: 45
          end: 51
          ctxt: 1
        value: Sample
        optional: false
      params:
        - type: Parameter
          span:
            start: 52
            end: 65
            ctxt: 0
          decorators: []
          pat:
            optional: true
            span:
              start: 52
              end: 65
              ctxt: 2
            type: Identifier
            typeAnnotation:
              type: TsTypeAnnotation
              span:
                start: 57
                end: 65
                ctxt: 0
              typeAnnotation:
                type: TsKeywordType
                span:
                  start: 59
                  end: 65
                  ctxt: 0
                kind: string
            value: type
      returnType: ~
      span:
        start: 36
        end: 303
        ctxt: 0
      type: FunctionDeclaration
      typeParameters: ~
